overlay.css
@font-face {
  font-family: 'Space Mono';
  src: url('chrome-extension://__MSG_@@extension_id__/fonts/SpaceMono-Regular.woff2') format('woff2');
}

#overlay-controls {
  position: fixed;
  top: 20px;
  right: 20px;
  background: white;
  z-index: 2147483647;
  width: 170px;
  pointer-events: auto;
  box-shadow: 0 0 5px rgba(0,0,0,0.3);
  font-family: 'Space Mono', serif;
  font-size: 12px;
  color: black;
}

#overlay-controls-header {
  padding: 5px;
  display: flex;
  align-items: center;
  cursor: grab;
  justify-content: space-between;
}
#overlay-controls-header > div {
  display: flex;
  gap: 5px;
}

#overlay-controls-header:active {
  cursor: grabbing;
}


#overlay-controls-body {
  padding: 10px 5px;
  border-top: 1px dashed black;
}
#overlay-controls.minimized #overlay-controls-body {
  display: none;
}


.control-group {
  margin-bottom: 8px;
  display: flex;
  flex-direction: column;
  gap: 2px;
}
.control-group.layers {
  margin-top: 15px;
  margin-bottom: 0;
}
.control-group label {
  font-weight: normal;
  margin-top: 10px;
  margin-bottom: -5px;
}
.control-group input[type="number"], .control-group input[type="range"] {
  width: 100%;
  font-family: 'Space Mono', serif;
  font-size: 12px;
  box-sizing: border-box;
}

.input-row {
  display: flex;
  gap: 8px;
}
.input-row > div {
  position: relative;
  flex: 1;
}

.input-row.xy label {
  display: block;
  margin: 0;
  margin-bottom: 5px;
}

#image-list-container {
  margin-top: 8px;
  max-height: 150px;
  overflow-y: auto;
}
.image-list-item {
  display: flex;
  align-items: center;
  padding: 5px 0;
  cursor: pointer;
}
.image-list-item {
}
.image-list-item:last-child {
  border-bottom: none;
}
.image-list-item.active span {
  text-decoration: underline;
}
.image-list-item-thumb {
  width: 32px;
  height: 32px;
  margin-right: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
}
.image-list-item img {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}
.image-list-item span {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.delete-img-btn {
  background: transparent;
  border: none;
  cursor: pointer;
  font-weight: bold;
  padding: 0 5px;
  margin-left: auto;
}
.delete-img-btn:hover {
  color: red;
}

#uploadBtn {
  width: 100%;
  box-sizing: border-box;
  margin-top: 5px;
  padding: 8px;
  font-family: 'Space Mono', serif;
  font-size: 12px;
  background-color: transparent;
  border: 1px solid black !important;
  cursor: pointer;
}

#overlay-controls button {
  color: black;
  border: none;
  cursor: pointer;
}

#overlay-controls-header button {
  color: black;
  background-color: transparent;
  padding: 0;
  cursor: pointer;
}

#overlay-controls input[type="number"] {
  color: black;
  background-color: transparent;
  padding: 2px 0;
  border: none;
  border-radius: 0;
  border-bottom: 1px solid black;
}

/* Custom Range Slider Styles */
input[type=range] {
  position: absolute;
  bottom: -2px;
  -webkit-appearance: none;
  background: transparent;
  width: 100%;
  cursor: pointer;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]::-webkit-slider-runnable-track {
  height: 1px;
  background: black;
}
input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 5px;
  height: 5px;
  background: black;
  margin-top: -2px; /* Center thumb on track */
}

